--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.22.3",
