--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.2",
+    "sonner": "^1.7.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
