--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sonner": "^1.7.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.5.4",
+    "tailwind-variants": "^0.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
