--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.461.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
